# Tab-clip-manager

./: .editorconfig  .eslintignore  .gitattributes  .gitignore  .prettierignore  .rustfmt.toml  LICENSE  README.md  components.json  eslint.config.mjs  index.html  index1.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  settings.html  sonar-project.properties  styles.css  switch.ps1  tailwind.config.cjs  tailwind.config.js  tsconfig.json  turbo.json  vite.config.ts
.github/workflows/: astro.yml
apps/app/: components.json  eslint.config.js  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/app/src-tauri/: tauri.conf.json
apps/app/src-tauri/src/: shortcuts.rs
apps/app/src/components/: ClipElement.tsx  ClipElements.tsx  ClipTabs.tsx
apps/app/src/components/theme/: ModeToggle.tsx
apps/app/src/hooks/: useElementsStore.tsx
apps/app/src/style/: App.scss  theme.scss
apps/app/src/windows/main/: App.tsx  main.tsx
apps/app/src/windows/settings/: App.tsx  main.tsx
apps/backend/: .gitignore  Cargo.toml  package.json  tauri.conf.json
apps/backend/prisma/: schema.prisma
apps/backend/prisma-cli/: Cargo.toml
apps/backend/src/: lib.rs  shortcuts.rs  tray_menu.rs
apps/backend/tauri/: Cargo.toml  tauri.conf.json
apps/backend/tauri/capabilities/: main.json
apps/backend/tauri/src/: lib.rs  main.rs  prisma.rs  shortcuts.rs  tray_menu.rs  watcher.rs
apps/docs/: astro.config.mjs  package.json
apps/docs/src/content/docs/: index.mdx
apps/frontend/: components.json  eslint.config.js  eslint.config.ts  package.json  postcss.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/frontend/src/components/: ClipElement.tsx  ClipElements.tsx  ClipTabs.tsx
apps/frontend/src/components/theme/: ModeToggle.tsx  ThemeProvider.tsx
apps/frontend/src/hooks/: useElementsStore.tsx  useEscapeKeyListener.ts  useWindowOpenListener.ts
apps/frontend/src/style/: App.css  App.scss
apps/frontend/src/windows/main/: App.tsx
apps/frontend/src/windows/settings/: App.tsx  main.tsx
archive/ui/: components.json  eslint.config.js  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
archive/ui/src/: index.ts  sidebar.tsx
src/: App.scss  App.tsx  ThemeContext.tsx  main.tsx  theme.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: commands.rs  lib.rs  main.rs  shortcuts.rs  tray_menu.rs
src/assets/components/: ThemeContext.tsx
src/assets/style/: App.scss
src/components/theme/: ModeToggle.tsx  ThemeProvider.tsx
src/components/ui/: button.tsx
src/style/: App.scss
src/windows/settings/: App.tsx  main.tsx
wiki/: astro.config.mjs  package.json
wiki/src/content/docs/: index.mdx
workspaces/app/: eslint.config.js  package.json  tailwind.config.cjs  vite.config.ts
workspaces/app/src-tauri/: tauri.conf.json
workspaces/app/src-tauri/src/: shortcuts.rs
workspaces/app/src/components/theme/: ThemeProvider.tsx
workspaces/app/src/windows/main/: App.tsx  index.html
workspaces/app/src/windows/settings/: main.tsx
workspaces/wiki/: package.json
