[workspace]
members = ["prisma-cli", "tauri"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["sqlite", "migrations"] }


[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
strip = false
panic = "abort"
incremental = true
codegen-units = 16
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "unpacked"
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
