[package]
name = "prisma-cli"
version = "0.0.1"
edition = "2021"

[dependencies]
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["sqlite", "migrations"] }
serde = { workspace = true }
serde_json = { workspace = true }
prisma-client-rust = { workspace = true }

