[package]
name = "tab-clip-manager"
version = "0.0.1"
description = "Tab clip manager"
authors = ["Ilya Balter"]
edition = "2021"

[lib]
name = "tab_clip_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
tauri = { version = "2.2.0", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2.2.0"
prisma-cli = { path = "../prisma-cli" }
serde = { workspace = true }
serde_json = { workspace = true }
prisma-client-rust = { workspace = true }
tauri-specta = { version = "2.0.0-rc.9" }
specta = "^2.0.0-rc"
tokio = "1.42.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.2.0"
