[package]
name = "tab-clip-manager"
version = "0.0.1"
description = "Tab clip manager"
authors = ["Ilya Balter"]
edition = "2021"

[lib]
name = "tab_clip_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
anyhow = "1"
tauri = { version = "2.3.1", default-features = false, features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2.2.2"
prisma-cli = { path = "../prisma-cli" }
serde = { workspace = true }
serde_json = { workspace = true }
prisma-client-rust = { workspace = true }
tauri-specta = { version = "2.0.0-rc.9" }
specta = { version = "^2.0.0-rc", default-features = false, features = ["derive"] }
tokio = { version = "1.42.0", default-features = false, features = ["rt-multi-thread", "macros", "sync"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = { version = "2.2.0", default-features = false }
